--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
@@ -29,7 +29,7 @@
     />
 
     <!-- Preload critical assets -->
-    <link rel="modulepreload" href="/src/main.jsx" />
+    <link rel="modulepreload" href="src/main.jsx" />
   </head>
   <body style="will-change: scroll-position">
     <!-- GPU hint for scroll -->
